# passbolt-salt

./: LICENSE  README.md  pyproject.toml  setup.py
.github/workflows/: publish-to-pypi.yml
example/pillars/: top.sls
example/pillars/passbolt/: myapp.sls  pwgroup.sls
example/states/: top.sls
example/states/important_secret/: init.sls
example/states/important_secret/files/: secret.conf
src/: salt_passbolt.py
src/salt_passbolt/: __init__.py  pgp_backend.py
tests/: conftest.py  test_pgp_backend.py
